# Volition-DJI

./: .gitignore  CLAUDE.md  LICENSE  README.md
deprecated/mqtt-refcode/: cloud_api_http.py  cloud_api_mqtt_dashboard.py  requirements.txt
deprecated/mqtt-refcode/couldhtml/: login.html
deprecated/mqtt-refcode/docs/: code_overview.md
deprecated/mqtt-refcode/monitor/: index.html
docs/: DJI-Ground-Station-Technical-Report.md  cloud-control-card.md  diagram.puml
grounstation/: CARD_STATE_MANAGEMENT_GUIDE.md  CLAUDE.md  MQTT_CONNECTION_GUIDE.md  astro.config.mjs  drc-cli.js  monitor-api.js  package.json  pnpm-lock.yaml  tailwind.config.mjs  test-drc-service.js  tsconfig.json
grounstation/docs/: login-and-drc-design.md
grounstation/public/: cache-worker.js  login.html
grounstation/public/scripts/: debug-console.js
grounstation/public/styles/: debug-console.css
grounstation/src/components/: CollapsibleCard.astro  DroneDeviceSwitcher.astro  GlobalStatusBar.astro
grounstation/src/config/: index.js  topic-templates.json
grounstation/src/lib/: devices.js  mqtt.js  services.js  simple-drc-service.js  state.js
grounstation/src/lib.backup/: debug.js  services.js  state.js  utils.js
grounstation/src/pages/: debug.astro  debug.html  index.astro
grounstation/src/scripts/: debug-logger.js  debug-webrtc.js  emqx-client-query.js  login-server.cjs  main.js  page-manager.js
grounstation/src/styles/: global.css
grounstation/tests/: ARCHITECTURE.md  README.md  TEST-SUMMARY.md
grounstation/tests/fixtures/: topic-templates.json
grounstation/tests/helpers/: auth-state-manager-mock.js  drc-state-manager-mock.js  error-handler-mock.js  logger.js  mock-helpers.js  (+1 more)
monitor-deprecated/js/: topicDrag.js  utils.js
monitor-deprecated/styles/: method-detail.css
monitor_deprecated/js/: main.js  mqttController.js
monitor_deprecated/styles/: methods.css
mqtt/: cloud_api_mqtt.py  mqtt_local_test.py
mqtt-refcode/: login-server.js
mqtt-refcode/control/: drc_state_detector.py  request_and_enter_drc.py
mqtt/control/: drc_state_detector.py
mqtt/couldhtml/: drc_virtual_stick.html  login.html
pythonSDK/: ARCHITECTURE_REFACTOR.md  CLAUDE.md  DATA_LOGGING_README.md  README.md  control_yaw.py  display.py  keyboard.py  keyboardControl.py  keypress.py  live.py  main.py  minimal_drc_test.py  notes.drawio  plot_pid_data.py  plot_yaw_data.py  requirements.txt  vrpn_display.py  vrpn_test.py
pythonSDK/archive/: drc_messages_20251021_161358.json
pythonSDK/control/: ADVANCED_CONTROL_FEATURES.md  PLANE_DEBUG_GUIDE.md  __init__.py  config.py  controller.py  logger.py  main.py  pid.py  plane_main.py  visualize.py  yaw_main.py
pythonSDK/djisdk/: README.md  __init__.py
pythonSDK/docs/: CONTROL_MODULE_GUIDE.md  JOYSTICK_UI_DESIGN.md  MOCK_SIMULATOR_GUIDE.md  MQTT_CLIENT_ID_FIX.md  PID_TUNING_GUIDE.md  PYTHON_IMPORT_GUIDE.md  QUICK_REFERENCE.md  README.md  control_model_upgrade_report.md  live_tool_guide.md  mqtt_sniffer_refactor.md
pythonSDK/examples/: return_home_example.py
pythonSDK/tests/: README.md  __init__.py  run_tests.py  test_mqtt_client.py  test_service_caller.py
pythonSDK/utils/: __init__.py  keyboard.py  keyboardControl.py  mqtt_sniffer.py
pythonSDK/vrpn/: CMakeLists.txt  README.md  __init__.py  compile_commands.json  main.cpp  send.cpp  types.py  vrpn_client.py
pythonSDK/vrpn_receiver/: README.md  example.py  vrpn_client.py
scripts/: mqtt-clients-query.js  pesuado-clients.py  test-drc-reply-listener.js
scripts/python/: REFACTOR_COMMIT_SUMMARY.md  TEST_REPORT.md  drc_messages_20251021_161358.md  request_and_enter_drc.py
videoStream/: README.md  check_opencv.py  play_ffplay.sh  rtmp_player.py  start_server.sh
(+135 files in other folders)
